infra/nextcloud/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-svc
  namespace: nextcloud-server
spec:
  ports:
  - name: https
    port: 443
    targetPort: https
  selector:
    app: nextcloud
