infra/nextcloud/ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  namespace: nextcloud-server
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  rules:
  - host: nextcloud.wavecat.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nextcloud-svc
            port:
              name: https
  tls:
  - hosts:
    - nextcloud.wavecat.net
    secretName: nextcloud.wavecat.net
